Add Gemfile and lock to excluded

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -20,6 +20,8 @@ exclude: [
   'Gulpfile.js',
   'package.json',
   'coffeelint.json',
+  'Gemfile',
+  'Gemfile.lock',
   'gulp',
   'node_modules',
   'build_prod']
