--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -14,6 +14,8 @@ exclude: [
   'Gulpfile.js',
   'package.json',
   'coffeelint.json',
+  'Gemfile',
+  'Gemfile.lock',
   'gulp',
   'node_modules',
   'build_dev']
