--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-duration": "0.0.0",
     "gulp-html-replace": "^1.5.4",
     "gulp-imagemin": "^2.4.0",
+    "gulp-inline-source": "^2.1.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
