Fix meta description

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author:
   email: hello@faviconvalley.show
 description: > # ignore newlines in this value
   A podcast exploring products, email, and the web hosted by Brandon Brown.
+meta_description: Exploring products, email, and the web.
 
 # Favicons
 favicons:
