--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ description: > # ignore newlines in this value
 meta_description: Exploring products, email, and the web.
 
 # Favicons
-favicons:
-  ico: /favicon.ico
-  png: /favicon.png
+favicon:
+  ico: favicon.ico
+  png: favicon.png
   theme_color: '#222222'
 
 logo_url: https://d1a5a04sfj6djm.cloudfront.net/avatar256.png
