Tweak new sponsor stuff

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -1,4 +1,6 @@
 - type: audible
   title: Audible.com 30-day Free Trial
   url: http://faviconvalley.show/audible
-  image: https://d1a5a04sfj6djm.cloudfront.net/sponsor/audible-logo-white.png
+- type: iwantmyname
+  title: Get a new domain in seconds at iWantMyName.com
+  url: http://faviconvalley.show/iwantmyname
