--- a/package.json
+++ b/package.json
@@ -5,30 +5,40 @@
     "browser-sync": "^2.11.1",
     "coffee-script": "^1.10.0",
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-awspublish": "^3.0.1",
     "gulp-coffee": "^2.3.1",
-    "gulp-concat-util": "^0.5.4",
+    "gulp-concat-util": "^0.5.5",
     "gulp-cssmin": "^0.1.7",
     "gulp-duration": "0.0.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-imagemin": "^2.4.0",
     "gulp-inline-source": "^2.1.0",
     "gulp-less": "^3.0.5",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-minify-html": "^1.0.5",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
     "gulp-newer": "^1.1.0",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "lodash": "^4.1.0",
+    "lodash": "^4.5.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
-    "yargs": "^3.32.0"
+    "yargs": "^4.2.0"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat-util": "^0.5.5",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^1.5.3",
+    "lodash": "^4.5.1",
+    "yargs": "^4.2.0"
   }
 }
