Upgrade all the things!

--- a/package.json
+++ b/package.json
@@ -2,43 +2,34 @@
   "name": "faviconvalley.show",
   "private": true,
   "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "coffee-script": "^1.12.2",
-    "del": "^2.2.0",
+    "browser-sync": "^2.18.12",
+    "coffee-script": "^1.12.6",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-awspublish": "^3.0.1",
-    "gulp-coffee": "^2.3.3",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-awspublish": "^3.3.0",
+    "gulp-coffee": "^2.3.4",
     "gulp-concat-util": "^0.5.5",
-    "gulp-cssmin": "^0.1.7",
+    "gulp-cssmin": "^0.2.0",
     "gulp-duration": "0.0.0",
     "gulp-html-replace": "^1.6.2",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-inline-source": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-inline-source": "^3.1.0",
     "gulp-less": "^3.3.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
-    "gulp-newer": "^1.1.0",
-    "gulp-notify": "^2.2.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "lodash": "^4.17.4",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "yargs": "^6.6.0"
+    "require-dir": "^0.3.2",
+    "run-sequence": "^1.2.2",
+    "yargs": "^8.0.1"
   },
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat-util": "^0.5.5",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^1.5.3",
-    "lodash": "^4.5.1",
-    "yargs": "^4.2.0"
-  }
+  "dependencies": {}
 }
