add package-lock.json, remove coffeelint

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -19,7 +19,7 @@ exclude: [
   'README.md',
   'Gulpfile.js',
   'package.json',
-  'coffeelint.json',
+  'package-lock.json',
   'Gemfile',
   'Gemfile.lock',
   'gulp_tasks',
