--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -14,7 +14,7 @@ exclude: [
   'README.md',
   'Gulpfile.js',
   'package.json',
-  'coffeelint.json',
+  'package-lock.json',
   'Gemfile',
   'Gemfile.lock',
   'gulp',
