Fix deployment build because Im silly

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {},
   "scripts": {
+    "start": "gulp",
+    "deploy": "gulp deploy",
     "precommit": "npm run test && lint-staged"
   },
   "lint-staged": {
