--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-awspublish": "^3.3.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat-util": "^0.5.5",
     "gulp-cssmin": "^0.2.0",
-    "gulp-duration": "0.0.0",
     "gulp-html-replace": "^1.6.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-less": "^3.3.0",
